--- a/Dockerfile.old
+++ b/Dockerfile.old
@@ -20,7 +20,7 @@ RUN adduser --system --no-create-home --disabled-login --disabled-password --gro
 # config dirs
 RUN mkdir /opt/nginx/http.conf.d && mkdir /opt/nginx/stream.conf.d
 
-ADD nginx.conf /opt/nginx/conf/nginx.conf
+ADD nginx.conf.old /opt/nginx/conf/nginx.conf
 ADD zero_downtime_reload.sh /opt/nginx/sbin/zero_downtime_reload.sh
 
 WORKDIR /
